[tool.poetry]
name = "AdventOfCode2021"
version = "0.1.0"
description = ""
authors = ["Bart Hogenes <barthogenes@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
flake8-bugbear = "^21.11.29"
black = {version = "^21.12b0", allow-prereleases = true}
pre-commit = "^2.16.0"
coverage = "^6.2"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
